--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
           #docker buildx create --name multibuilder
           #docker buildx use multibuilder
           #docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t bbernhard/signal-cli-rest-api:${VERSION}-ci .
+          podman run --rm --privileged multiarch/qemu-user-static --reset -p yes
           podman manifest create build
           podman build --format docker --platform linux/amd64,linux/arm64,linux/arm/v7 -t bbernhard/signal-cli-rest-api:${VERSION}-ci --manifest localhost/build .
 
