--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,5 @@ jobs:
           docker run --privileged --rm tonistiigi/binfmt --install all
           podman manifest create build
           podman build --format docker --platform linux/amd64,linux/arm64,linux/arm/v7 -t bbernhard/signal-cli-rest-api:${VERSION}-ci --manifest localhost/build .
+          podman push bbernhard/signal-cli-rest-api:${VERSION}-ci docker://docker.io/bbernhard/temp:${VERSION}-ci
 
